Update version to 2025.1.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "safequanta-tls"
-version = "0.1.0"
+version = "2025.1.0"
 edition = "2021"
-authors = ["Ali Salimi <alisalimi77>"]
-description = "A Next-Generation TLS Proxy with Post-Quantum Cryptography Support"
+authors = ["Ali Salimi <alisalimi77@gmail.com>"]
+description = "A quantum-safe TLS proxy implementation"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/alisalimi77/SafeQuanta-TLS"
 readme = "README.md"
@@ -12,11 +12,12 @@ categories = ["cryptography", "network-programming", "security"]
 
 [dependencies]
 # Async runtime
-tokio = { version = "1.37", features = ["full"] }
+tokio = { version = "1.36", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
+tokio-rustls = "0.25"
 
 # TLS and cryptography
-rustls = "0.21"
+rustls = "0.22"
 rustls-pemfile = "1.0"
 rustls-native-certs = "0.7"
 ring = "0.17"
@@ -33,8 +34,8 @@ dotenv = "0.15"
 # Logging and metrics
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-metrics = "0.21"
-metrics-exporter-prometheus = "0.12"
+metrics = "0.22"
+metrics-exporter-prometheus = "0.13"
 
 # HTTP and networking
 hyper = { version = "1.0", features = ["full"] }
@@ -51,10 +52,22 @@ futures = "0.3"
 once_cell = "1.19"
 parking_lot = "0.12"
 
+# Quantum-safe cryptography dependencies
+pqcrypto = "0.1"
+pqcrypto-traits = "0.1"
+pqcrypto-kyber = "0.1"
+pqcrypto-dilithium = "0.1"
+rand = "0.8"
+rand_core = "0.6"
+
+# Certificate generation
+rcgen = "0.11"
+
 [dev-dependencies]
 tokio-test = "0.4"
 criterion = "0.5"
 mockall = "0.12"
+tempfile = "3.10"
 
 [[bench]]
 name = "handshake_benchmark"
