Update dependencies, improve README, and enhance configuration handling
- Updated version in Cargo.toml to 0.1.0 and upgraded dependencies including Tokio and pqcrypto.
- Enhanced README with detailed installation instructions and troubleshooting tips.
- Modified .gitignore to explicitly include test fixtures.
- Improved configuration structs for cloning and added new fields for better handling.
- Implemented quantum-safe key exchange and signing functionalities in the crypto module.
- Added tests for proxy data transfer and TLS handshake to ensure functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,10 @@ certs/
 *.key
 *.crt
 
+# Explicitly include test fixtures
+!tests/fixtures/
+!tests/fixtures/*
+
 # OS specific
 .DS_Store
 Thumbs.db
