--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "safequanta-tls"
-version = "2025.1.0"
+version = "0.1.0"
 edition = "2021"
 authors = ["Ali Salimi <alisalimi77@gmail.com>"]
 description = "A quantum-safe TLS proxy implementation"
@@ -12,13 +12,13 @@ categories = ["cryptography", "network-programming", "security"]
 
 [dependencies]
 # Async runtime
-tokio = { version = "1.36", features = ["full"] }
+tokio = { version = "1.45", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 tokio-rustls = "0.25"
 
 # TLS and cryptography
 rustls = "0.22"
-rustls-pemfile = "1.0"
+rustls-pemfile = "2.0"
 rustls-native-certs = "0.7"
 ring = "0.17"
 openssl = "0.10"
@@ -53,25 +53,23 @@ once_cell = "1.19"
 parking_lot = "0.12"
 
 # Quantum-safe cryptography dependencies
-pqcrypto = "0.1"
-pqcrypto-traits = "0.1"
-pqcrypto-kyber = "0.1"
-pqcrypto-dilithium = "0.1"
+pqcrypto-kyber = "0.5"
+pqcrypto-dilithium = "0.5"
+pqcrypto-traits = "0.3"
 rand = "0.8"
 rand_core = "0.6"
 
 # Certificate generation
 rcgen = "0.11"
 
+# Additional dependencies
+toml = "0.8"
+
 [dev-dependencies]
 tokio-test = "0.4"
 criterion = "0.5"
 mockall = "0.12"
 tempfile = "3.10"
-
-[[bench]]
-name = "handshake_benchmark"
-harness = false
 
 [profile.release]
 opt-level = 3
